Finally fixing Admin overlap issue, and refactoring FieldFactory class

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -42,6 +42,8 @@
     #admin-body {
         border: 2px solid lightgrey;
         height: 75vh;
+        overflow-x: hidden;
+        overflow-y: scroll;
         padding: 10px;
         position: relative;
 
